# vodozemac-android

./: .bash.linux.rc  .gitignore  Cargo.toml  README.md  build.sh
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/de/cogia/cogiavodozemacjni/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/de/cogia/cogiavodozemacjni/: MainActivity.java
android/app/src/main/java/de/cogia/vodozemac/: IdentityKeys.java  InboundCreationResult.java  OlmAccount.java  OlmDecryptedMessage.java  OlmEstablishedSas.java  OlmException.java  OlmGroupSession.java  OlmInboundGroupSession.java  OlmMessage.java  OlmSas.java  OlmSasBytes.java  OlmSession.java  Session.java  SessionConfig.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/de/cogia/cogiavodozemacjni/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
src/: account.rs  group_sessions.rs  lib.rs  sas.rs  session.rs
